--- a/index.html
+++ b/index.html
@@ -27,32 +27,28 @@
 </head>
 
 <body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews.
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-
+  <header class="header">
+    <h1>Join our community</h1>
+    <p class="header__subtitle">30-day, hassle-free money back guarantee</p>
+    <p class="header__description">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+  </header>
+  <main class="main">
+    <h2 class="main__header">Monthly Subscription</h2>
+    <p class="main__price"><span class="main__dollar">&dollar;29</span> per month</p>
+    <p class="main__description">Full access for less than &dollar;1 a day</p>
+    <button class="button">Sign Up</button>
+  </main>
   <footer>
+    <h2 class="footer__header">Why Us</h2>
+    <ul>
+      <li>Tutorials by industry experts</li>
+      <li>Peer &amp; expert code review</li>
+      <li>Coding exercises</li>
+      <li>Access to our GitHub repos</li>
+      <li>Community forum</li>
+      <li>Flashcard decks</li>
+      <li>New videos every week</li>
+    </ul>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
