--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <!-- <div class="body"> -->
   <header class="header">
     <h1>Join our community</h1>
     <p class="header__subtitle">30-day, hassle-free money back guarantee</p>
@@ -38,9 +39,9 @@
     <p class="main__description">Full access for less than &dollar;1 a day</p>
     <button class="button">Sign Up</button>
   </main>
-  <footer>
+  <footer class="footer">
     <h2 class="footer__header">Why Us</h2>
-    <ul>
+    <ul class="footer__list">
       <li>Tutorials by industry experts</li>
       <li>Peer &amp; expert code review</li>
       <li>Coding exercises</li>
@@ -49,11 +50,12 @@
       <li>Flashcard decks</li>
       <li>New videos every week</li>
     </ul>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
   </footer>
+<!-- </div> -->
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Obhasa Putra</a>.
+  </p>
 </body>
 
 </html>
